--- a/src/app/components/hero-list/hero-list.component.html
+++ b/src/app/components/hero-list/hero-list.component.html
@@ -10,4 +10,5 @@
             <option value="2">Date</option>
         </select>
     </div>
+    <app-hero-card class="hero-cards"></app-hero-card>
   </div>
