--- a/src/app/components/hero-card/hero-card.component.html
+++ b/src/app/components/hero-card/hero-card.component.html
@@ -1,14 +1,16 @@
-<div class="card hero-card">
+<div class="hero-card">
   <div class="header-container">
     <img  class="header-image" src="../../../assets/marvelLogo.png"/>
     <div class="right-container">
       <p class="hero-name">example name</p>
       <p class="hero-description">lorem ipsum dolor</p>
-      <button type="button" class="btn btn-danger">Danger</button>
+      <button type="button" class="button-card-hero">Danger</button>
     </div>
   </div>
-  <label>Related comics</label>
-  <div class="bottom-container">
-    <p>asdasd</p>
+  <div class="main-bottom-container">
+    <p class="related-comics-text">Related comics</p>
+    <div class="bottom-container">
+      <p class="comics-text">asdasd</p>
+    </div>
   </div>
 </div>
