--- a/src/app/components/hero-card/hero-card.component.html
+++ b/src/app/components/hero-card/hero-card.component.html
@@ -1,10 +1,10 @@
-<div class="hero-card">
+<div class="hero hero-card">
   <div class="header-container">
     <img  class="header-image" src="../../../assets/marvelLogo.png"/>
     <div class="right-container">
       <p class="hero-name">example name</p>
       <p class="hero-description">lorem ipsum dolor</p>
-      <button type="button" class="button-card-hero">Danger</button>
+      <button type="button" class="button-card-hero">View more</button>
     </div>
   </div>
   <div class="main-bottom-container">
