--- a/src/app/components/hero-list/hero-list.component.css
+++ b/src/app/components/hero-list/hero-list.component.css
@@ -23,13 +23,14 @@
   padding-right: 10% !important;
 }
 .container-hero-cards{
-    width: 90%;
+    width: 100%;
     display: grid;
     grid-template-columns: 30% 30% 30%;
+    justify-content: space-between;
+    align-content: center;
 }
 @media screen and (max-width: 1500px) {
     .container-hero-cards{
         display: -moz-grid-group;
     }
   }
-  
