--- a/src/app/components/hero-list/hero-list.component.html
+++ b/src/app/components/hero-list/hero-list.component.html
@@ -11,6 +11,6 @@
         </select>
     </div>
     <div class="container-hero-cards">
-        <app-hero-card class="hero-cards" *ngFor="let hero of heroes?.data?.results"></app-hero-card>
+        <app-hero-card class="hero-cards" *ngFor="let hero of heroes?.data?.results" [heroInfo] = "hero"></app-hero-card>
     </div>
   </div>
