--- a/src/app/components/hero-list/hero-list.component.css
+++ b/src/app/components/hero-list/hero-list.component.css
@@ -34,3 +34,33 @@
         display: -moz-grid-group;
     }
   }
+.bottom-container{
+    width: 100%;
+    justify-content: center;
+    display: inline-flex;
+    height: 20%;
+    margin-top: 20px;
+    padding-bottom: 10px;
+}
+.page-number-button{
+    background-color: white;
+    border-style: none;
+    width: 2%;
+    height: 10%;
+    justify-content: center;
+    margin-right: 2%;
+    -webkit-box-shadow: rgb(0, 0, 0) 0px 10px 13px -7px, 4px 27px 12px 3px rgba(0,0,0,0); 
+    box-shadow: rgb(0, 0, 0) 0px 10px 13px -7px, 4px 27px 12px 3px rgba(0,0,0,0);
+}
+.left-arrow, .right-arrow{
+    border-style: none;
+    background-color: white;
+    -webkit-box-shadow: rgb(0, 0, 0) 0px 10px 13px -7px, 4px 27px 12px 3px rgba(0,0,0,0); 
+    box-shadow: rgb(0, 0, 0) 0px 10px 13px -7px, 4px 27px 12px 3px rgba(0,0,0,0);
+}
+.left-arrow{
+    margin-right: 2%;
+}
+.selectedpage{
+    font-weight: bold;
+}
