--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -2,8 +2,8 @@
     <img  src="../../../assets/marvelLogo.png" class="marvel-logo"/>
     <div class="col-md-6 mb-4 search-bar">
         <form class="form-search">
-          <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search a character" aria-label="Search a character">
-          <i class="search-logo" aria-hidden="true"><img  src="../../../assets/search.png"/></i>
+          <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search a character" aria-label="Search a character" name="heroName" #newItem>
+          <button (click)="addNewItem(newItem.value)" class="search-button" type="button"><i class="search-logo" aria-hidden="true"><img  src="../../../assets/search.png"/></i></button>
         </form>
       </div>
 </div>
