--- a/src/app/components/hero-card/hero-card.component.css
+++ b/src/app/components/hero-card/hero-card.component.css
@@ -44,6 +44,7 @@
   font-family: 'Arial Nova Light';
   font-size: x-small;
   padding-right: 10px;
+  text-decoration: none;
 }
 .bottom-container{
   display: inline-flex;
@@ -120,4 +121,14 @@
     background-color: white;
     width: 100px;
   }
+}
+.content-modal-body{
+  width: 100%;
+  height: 100%;
+}
+.container-comic-image-details{
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  padding-bottom: 10px;
 }
