--- a/src/app/components/hero-list/hero-list.component.css
+++ b/src/app/components/hero-list/hero-list.component.css
@@ -21,13 +21,15 @@
 .hero-cards{
   padding-top: 50px;
   padding-right: 10% !important;
+  width: 40%;
 }
 .container-hero-cards{
     width: 100%;
-    display: grid;
-    grid-template-columns: 30% 30% 30%;
-    justify-content: space-between;
-    align-content: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+
 }
 @media screen and (max-width: 1500px) {
     .container-hero-cards{
