--- a/src/app/pages/hero-details/hero-details.component.css
+++ b/src/app/pages/hero-details/hero-details.component.css
@@ -1,16 +1,15 @@
 .container-page{
-    justify-content: center;
-    text-align: center;
     width: 100vw;
     height: 100vh;
-    align-items: center;
 }
 .details-container{
-    background-color: red;
-    width: 20%;
-    height: 20%;
-    margin-left: 40%;
-    margin-top: 15%;
+    width: 50%;
+    justify-content: center;
+    text-align: center;
+    position: relative;
+    margin: 0 auto;
+    background-color: rgb(244, 244, 244);
+    margin-top: 20px;
 }
 .marvel-logo{
     width: 2%;
@@ -28,4 +27,43 @@
 .home-btn{
     border-style: none;
     background-color: rgb(45, 39, 39);
+}
+.details-card-container{
+    width: 20%; /* Can be in percentage also. */
+    height: 20%;
+    margin: 0 auto;
+    padding: 10px;
+    position: relative;
+    text-align: center;
+    background-color: red;
+    margin-top: 20%;
+}
+.image-details{
+    width: 25%;
+    position: relative;
+    margin: 0 auto;
+}
+.hero-description{
+    font-family: 'Arial Nova Light';
+  }
+.hero-name{
+font-family: 'Arial Black';
+}
+.comics, .series, .events{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    text-align: center;
+    font-family: 'Arial Nova Light';
+}
+.text-c-s-e{
+    padding-right: 5%;
+}
+.title-text{
+    font-family: 'Arial Black';
+}
+.container-hero-images{
+ width: 100%;
+ flex-wrap: wrap;
 }
